feat: add concurrent batch process resumes
